requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simplebayesn"
version = "0.0.1"
description = "SimpleBayeSN model for SNIa data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Marco Giunta", email = "mgiunta@sissa.it" }]
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]